--- a/index.html
+++ b/index.html
@@ -759,8 +759,8 @@
                 <!-- Card 4: Status - PROFITABLE (Green) -->
                 <div style="background: linear-gradient(135deg, rgba(76, 175, 80, 0.3) 0%, rgba(40, 120, 80, 0.3) 100%); border: 3px solid #4caf50; border-radius: 12px; padding: 20px; text-align: center; box-shadow: 0 8px 25px rgba(76, 175, 80, 0.4);">
                     <div style="font-size: 12px; color: #b0b0b0; text-transform: uppercase; letter-spacing: 2px; margin-bottom: 15px;">STATUS</div>
-                    <div style="text-align: center; color: #00d4ff; margin-top: 0; border: none; padding: 0;">✅</div>
-                    <div style="text-align: center; color: #00d4ff; margin-top: 0; border: none; padding: 0;">PROFITABLE</div>
+                    <div style="font-size: 42px; margin: 15px 0;">✅</div>
+                    <div style="font-size: 42px; font-weight: 900; color: #4caf50; margin: 8px 0; letter-spacing: 1px;">PROFITABLE</div>
                     <div style="font-size: 12px; color: #b0b0b0; text-transform: uppercase; letter-spacing: 2px;">11 USERS > 6 USER BREAKEVEN</div>
                 </div>
             </div>
