Update advisor names in index.html

--- a/index.html
+++ b/index.html
@@ -948,25 +948,25 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>[Advisor 1]</td>
+                    <td>Zack Tyson</td>
                     <td>AI/Machine Learning</td>
                     <td>[Previous role at major tech company, academic credentials]</td>
                     <td>Guides AI architecture and model optimization</td>
                 </tr>
                 <tr>
-                    <td>[Advisor 2]</td>
+                    <td>Justice</td>
                     <td>Cryptocurrency Trading</td>
                     <td>[Former hedge fund trader, crypto exchange executive]</td>
                     <td>Market strategy and institutional partnership development</td>
                 </tr>
                 <tr>
-                    <td>[Advisor 3]</td>
+                    <td>Christian Lovelace</td>
                     <td>Regulatory/Compliance</td>
                     <td>[Former SEC, CFTC, or FinCEN experience]</td>
                     <td>Global compliance strategy and licensing navigation</td>
                 </tr>
                 <tr>
-                    <td>[Advisor 4]</td>
+                    <td>Maaz Memon</td>
                     <td>Fintech Scaling</td>
                     <td>[Scaled previous fintech startup to $XXM ARR]</td>
                     <td>Go-to-market strategy and operational excellence</td>
