Change link from index.html to deck.html

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             </div>
         </div>
         
-        <a href="index.html" class="cta-button">
+        <a href="deck.html" class="cta-button">
             View Full Investment Deck →
         </a>
         
