Simplify video playback error messages
Removed additional messages about video playback issues.

--- a/index.html
+++ b/index.html
@@ -242,14 +242,9 @@
                 <video controls autoplay muted loop playsinline>
                     <source src="./mariah_intro_video.mp4" type="video/mp4">
                     <source src="mariah_intro_video.mp4" type="video/mp4">
-                    Your browser does not support the video tag, or the video cannot load from a local file. 
-                    <br><br>
-                    Please view this page through a web server or upload the video to YouTube/Vimeo.
+                    Your browser does not support the video tag.
                 </video>
             </div>
-            <p style="font-size: 12px; color: #808080; margin-top: 15px;">
-                Note: If video doesn't play, you may need to view this through a web server (not as a local file).
-            </p>
         </div>
         
         <div class="metrics-strip">
