Update link to Investment Highlights page

--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
             </div>
         </div>
         
-        <a href="deck.html" class="cta-button">
-            View Full Investment Deck →
+        <a href="investment-highlights.html" class="cta-button">
+            View Investment Highlights →
         </a>
         
         <p class="footer-note">
