Update link to the full deck in HTML file

--- a/investment-highlights.html
+++ b/investment-highlights.html
@@ -1035,7 +1035,7 @@
             </div>
         </div>
         <div style="margin-top: 30px;">
-            <a href="deck-full.html" style="display: inline-block; background: linear-gradient(135deg, #8a2be2 0%, #00d4ff 100%); color: #fff; padding: 16px 50px; border-radius: 30px; font-weight: 900; font-size: 16px; text-decoration: none; box-shadow: 0 4px 15px rgba(138, 43, 226, 0.4); transition: all 0.3s;">
+            <a href="deck.html" style="display: inline-block; background: linear-gradient(135deg, #8a2be2 0%, #00d4ff 100%); color: #fff; padding: 16px 50px; border-radius: 30px; font-weight: 900; font-size: 16px; text-decoration: none; box-shadow: 0 4px 15px rgba(138, 43, 226, 0.4); transition: all 0.3s;">
                 VIEW FULL DECK ↓
             </a>
         </div>
