--- a/deck.html
+++ b/deck.html
@@ -847,7 +847,7 @@
             
             <div style="max-width: 800px; margin: 0 auto;">
                 <h1 style="color: #fff; font-size: 36px; margin: 25px 0 15px 0; font-weight: 700; letter-spacing: 1px;">
-                    Complete Investment Deck
+                    Complete Investment Deck & Business Overview
                 </h1>
                 <div style="color: #808080; font-size: 16px; letter-spacing: 1px; line-height: 1.6;">
                     #1 Intelligence Meets X-Change | AI-Powered Cryptocurrency Trading Platform
