--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <h1 class="headline">Transforming Crypto Trading Through Artificial Intelligence</h1>
         
         <p class="subheadline">
-            An AI-driven cryptocurrency trading platform with proven revenue, institutional-grade technology, and a clear path to $60-75M valuation within 24 months.
+            Mariah is an interactive AI-driven cryptocurrency trading platform with proven revenue, institutional-grade technology, and a clear path to $60-75M valuation within 24 months.
         </p>
         
         <div class="video-container">
